[package]
name = "hello-grpc"
version = "0.1.0"
authors = ["bill <bill0.huang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hellogrpc-server"
path = "src/server.rs"

[[bin]]
name = "hellogrpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"